<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/leftChevron"
        android:title="@string/chevron_left"
        android:icon="@drawable/svg_ic_left_chevron"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/rightChevron"
        android:title="@string/chevron_right"
        android:icon="@drawable/svg_ic_right_chevron"
        app:showAsAction="ifRoom"/>
</menu>
