<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/themeColorHighlight"
    android:paddingLeft="@dimen/item_padding"
    android:paddingRight="@dimen/item_padding"
    android:paddingTop="@dimen/item_static_padding"
    android:paddingBottom="@dimen/item_static_padding">

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_title_size"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true" />

    <TextView
        android:id="@+id/totalCostTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_title_size"
        android:layout_marginLeft="@dimen/item_static_padding"
        android:layout_marginStart="@dimen/item_static_padding"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/dateTextView"
        android:layout_toEndOf="@+id/dateTextView"
        android:layout_centerVertical="true"
        android:gravity="end"/>
</RelativeLayout>